<resources>
    <string name="app_name">OnlineShop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_wash">Car Wash</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="dashboard">Dashboard</string>
    <string name="messages">Messages</string>
    <string name="cart">Cart</string>
    <string name="wish_list">Wish List</string>
    <string name="favorite_shops">Favorite Shops</string>
    <string name="vouchers">Vouchers</string>
    <string name="invite_amp_earn"><![CDATA[Invite & Earn]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="serviceimage">serviceimage</string>
    <string name="categories">Categories</string>
    <string name="brands">Brands</string>
    <string name="shops">Shops</string>
    <string name="item_name">Item Name</string>
    <string name="bus">Bus</string>
    <string name="flash_deal">Flash Deal</string>
    <string name="wow_vinegar_sulphate_parabens_shampoo">WOW Vinegar Sulphate Parabens Shampoo</string>
    <string name="tk">৳ 255</string>
    <string name="share">share</string>
    <string name="copy">COPY</string>
    <string name="product_description">A Backpack also called book bag, kit bag, knapsack, rucksack, a pack is, in its simplest form, a cloth sack carried on one\'s back and secured with two straps that go over the shoulders, but there can be variations to this basic design. Lightweight types of backpacks are sometimes worn on only one shoulder strap.</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="blue">Blue</string>
    <string name="addressOfBrand">193 Bangabandhu Sarak, Narayanganj 1400, Bangladesh</string>
    <string name="MobileNoOfBrand">01784596215</string>
    <string name="price">690</string>
    <string name="reviews_amp_ratings"><![CDATA[Reviews & Ratings]]></string>
    <string name="view_all_or_write_a_review">View all or write a review</string>
    <string name="todo">TODO</string>
    <string name="Zero">0</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="totalRating">0.0</string>
    <string name="shopname">Comilla Computer</string>
    <string name="totalreviewerofshop">( 0 )</string>
    <string name="totalFollowersOfShop">(240)</string>
    <string name="location">Location</string>
    <string name="call">Call</string>
    <string name="delivery">Delivery</string>
    <string name="reviews">Reviews</string>
    <string name="accessories">Accessories</string>
    <string name="shop_categories">Categories</string>
    <string name="buy_now">Buy Now</string>
    <string name="all_products">All Products</string>
    <string name="logout">logout</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="transaction_history">Transaction History</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="address">Address</string>
    <string name="recent_products">Recent Products</string>
</resources>
