<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation">

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.onlineshop.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.onlineshop.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.onlineshop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/wishFragment"
        android:name="com.example.onlineshop.bottomNavFragment.WishFragment"
        android:label="Wish List"
        tools:layout="@layout/fragment_wish" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.onlineshop.bottomNavFragment.CartFragment"
        android:label="Shopping Cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.onlineshop.bottomNavFragment.DashboardFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <navigation
        android:id="@+id/navigation"
        app:startDestination="@id/nav_home" >
        <fragment
            android:id="@+id/nav_home"
            android:name="com.example.onlineshop.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">

            <action
                android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
                app:destination="@id/nav_home_second" />
        </fragment>
    </navigation>
</navigation>