<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_view"
    tools:context=".bottomNavFragment.DashboardFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/profileImage"
                android:src="@drawable/profile"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#ff000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userName"
                    android:text="Fazlul Hoque"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>
                <Button
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:id="@+id/blncCheckBtn"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/slider_background"
                    android:backgroundTint="#FF020537"
                    android:text="Check Balance"
                    android:textColor="#fff"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/orders"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/message"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/messages"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/notification"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/transaction"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_history"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/person"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_personal_info"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/changepass"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/language"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/editAddress"
                android:src="@drawable/pen"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="170dp"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>