<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:id="@+id/shop_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/green_call" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/call"
                android:textColor="#6C6464" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:id="@+id/shop_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/red_location" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="#6C6464" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:id="@+id/shop_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/delivery" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delivery"
                android:textColor="#6C6464" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:id="@+id/shop_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/yellow_star" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reviews"
                android:textColor="#6C6464" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>